update Application manifest

--- a/infrastructure/terraform/workspaces/cluster/argocd/brand-chart-application.yaml
+++ b/infrastructure/terraform/workspaces/cluster/argocd/brand-chart-application.yaml
@@ -7,7 +7,7 @@ spec:
   project: default
   source:
     chart: brand-chart
-    repoURL: http://jbutcher93.github.io/platform/charts/brands
+    repoURL: http://jbutcher93.github.io/platform/
     targetRevision: 0.1.0
     helm:
       releaseName: nginx
