--- a/charts/brands/Chart.yaml
+++ b/charts/brands/Chart.yaml
@@ -3,7 +3,7 @@ name: brand-chart
 description: A Helm chart for Kubernetes
 type: application
 version: 0.1.0
-appVersion: "1.16.0"
 dependencies:
   - name: brand-chart
-    repository: oci://us-central1-docker.pkg.dev/ls-devx-stage-3e9c/helm-charts/
+    repository: oci://us-central1-docker.pkg.dev/ls-devx-stage-3e9c/helm-charts
+    version: "0.1.0-087139e3fe50"
