--- a/charts/brands/Chart.yaml
+++ b/charts/brands/Chart.yaml
@@ -6,4 +6,4 @@ version: 0.1.0
 dependencies:
   - name: brand-chart
     repository: oci://us-central1-docker.pkg.dev/ls-devx-stage-3e9c/helm-charts
-    version: "0.1.0-087139e3fe50"
+    version: "0.1.0"
