--- a/charts/brands/Chart.yaml
+++ b/charts/brands/Chart.yaml
@@ -2,8 +2,8 @@ apiVersion: v2
 name: brand-chart
 description: A Helm chart for Kubernetes
 type: application
-version: 0.1.0
+version: "0.1.0"
 dependencies:
-  - name: brand-chart
-    repository: oci://us-central1-docker.pkg.dev/ls-devx-stage-3e9c/helm-charts
+  - brand-chart
     version: "0.1.0"
+    repository: oci://us-central1-docker.pkg.dev/ls-devx-stage-3e9c/helm-charts
