--- a/charts/brands/Chart.yaml
+++ b/charts/brands/Chart.yaml
@@ -4,6 +4,6 @@ description: A Helm chart for Kubernetes
 type: application
 version: "0.1.0"
 dependencies:
-  - brand-chart
+  - name: brand-chart
     version: "0.1.0"
     repository: oci://us-central1-docker.pkg.dev/ls-devx-stage-3e9c/helm-charts
