--- a/.github/workflows/helm_template_test.yaml
+++ b/.github/workflows/helm_template_test.yaml
@@ -5,7 +5,7 @@ on:
     branches:
       - *
     paths:
-      - "infrastructure/kubernetes/helm"
+      - "infrastructure/kubernetes/helm/**"
 
 jobs:
   release:
