--- a/.github/workflows/helm_template_test.yaml
+++ b/.github/workflows/helm_template_test.yaml
@@ -1,9 +1,8 @@
 name: Helm template test
 
 on:
-  push:
-    branches:
-      - "*"
+  pull_request:
+    types: [opened, synchronize, edited]
     paths:
       - "/**"
 
