path and types change

--- a/.github/workflows/helm_template_test.yaml
+++ b/.github/workflows/helm_template_test.yaml
@@ -2,9 +2,9 @@ name: Helm template test
 
 on:
   pull_request:
-    types: [opened, synchronize, edited]
+    types: [opened, synchronize, edited, reopened, review_requested]
     paths:
-      - "/**"
+      - "charts/**"
 
 jobs:
   release:
