--- a/charts/brands/Chart.yaml
+++ b/charts/brands/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: general-chart
-description: A Helm chart for Kubernetes
+name: superchart
+description: A superchart 
 type: application
 version: "0.1.0"
 dependencies:
