--- a/infrastructure/terraform/workspaces/test/router-chart.appset.yaml
+++ b/infrastructure/terraform/workspaces/test/router-chart.appset.yaml
@@ -16,7 +16,7 @@ spec:
         - name: router.brand
           value: ${brand}
         - name: router.service.name
-          value: ${brand}-router-{{metadata.labels.region}}
+          value: ${brand}-router
         - name: router.hostname
           value: ${url}
         - name: router.configmap.loglevel
