update Helm chart

--- a/infrastructure/kubernetes/helm/brand-app/values.yaml
+++ b/infrastructure/kubernetes/helm/brand-app/values.yaml
@@ -14,8 +14,7 @@ router:
     apollo_router:
       APOLLO_KEY: ""
   cors:
-    origins:
-      - ""
+    origins: []
   auth0:
     header: false
     require: ""
